force-app/main/default/objects/Case/fields/Time_to_PO_Obtained__c.field-meta.xml
<CustomField>
    <fullName>Time_to_PO_Obtained__c</fullName>
    <formula>Date_PO_Obtained__c  -  Date_of_Inquiry__c</formula>
    <label>Time to PO Obtained</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>