force-app/main/default/objects/Case/fields/Time_to_SL_Approved__c.field-meta.xml
<CustomField>
    <fullName>Time_to_SL_Approved__c</fullName>
    <formula>Date_SL_Approved__c - Date_of_Inquiry__c</formula>
    <label>Time to SL Approved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>