force-app/main/default/objects/Case/fields/Time_to_Vendor_Onboarding_Completed__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Vendor_Onboarding_Completed__c</fullName>
    <formula>Date_Vendor_Onboarding_Completed__c  -  Date_of_Inquiry__c</formula>
    <label>Time to Vendor Onboarding Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>