force-app/main/default/objects/Case/fields/Time_to_VG_IACUC_approval__c.field-meta.xml
<CustomField>
    <fullName>Time_to_VG_IACUC_approval__c</fullName>
    <formula>VG_IACUC_Approved__c - Date_of_Inquiry__c</formula>
    <label>Time to VG IACUC approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>