force-app/main/default/objects/Case/fields/Vendor_Health_Status__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Health_Status__c</fullName>
    <label>Vendor Health Status</label>
    <type>TextArea</type>
</CustomField>