force-app/main/default/objects/Case/fields/VG_IACUC_Approved__c.field-meta.xml
<CustomField>
    <fullName>VG_IACUC_Approved__c</fullName>
    <label>VG IACUC Approved</label>
    <type>Date</type>
</CustomField>