force-app/main/default/objects/Case/fields/Where_animals_will_be_bred__c.field-meta.xml
<CustomField>
    <fullName>Where_animals_will_be_bred__c</fullName>
    <label>Where animals will be bred</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onsite</fullName>
            </value>
            <value>
                <fullName>Offsite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>