force-app/main/default/objects/Case/fields/X01_Clone_Created__c.field-meta.xml
<CustomField>
    <fullName>X01_Clone_Created__c</fullName>
    <inlineHelpText>Needed to create founder animals</inlineHelpText>
    <label>01 Clone Created</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No_Pending</valueSetName>
    </valueSet>
</CustomField>