force-app/main/default/objects/Case/recordTypes/VG_Request.recordType-meta.xml
<RecordType>
    <fullName>VG_Request</fullName>
    <active>true</active>
    <businessProcess>VG Request</businessProcess>
    <description>VelociGene material requests</description>
    <label>VG Request</label>
</RecordType>