force-app/main/default/objects/Case/listViews/Aging_Cases.listView-meta.xml
<ListView>
    <fullName>Aging_Cases</fullName>
    <columns>Requesting_TFA__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Requesting_TFA__c</field>
        <operation>equals</operation>
        <value>Aging</value>
    </filters>
    <label>All Aging Cases</label>
</ListView>