force-app/main/default/objects/Case/listViews/All_Canceled_Cases.listView-meta.xml
<ListView>
    <fullName>All_Canceled_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Licensing_Vendor__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Requested_Item_Name__c</columns>
    <columns>Requesting_TFA__c</columns>
    <columns>PR_Request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Canceled</value>
    </filters>
    <label>All Canceled Cases</label>
</ListView>