force-app/main/default/objects/Case/listViews/All_Cases_On_Hold.listView-meta.xml
<ListView>
    <fullName>All_Cases_On_Hold</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>On Hold</value>
    </filters>
    <label>All Cases On-Hold</label>
</ListView>