force-app/main/default/objects/Case/listViews/All_M_M_cases.listView-meta.xml
<ListView>
    <fullName>All_M_M_cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Requesting_TFA__c</field>
        <operation>equals</operation>
        <value>&quot;Obesity, Muscle &amp; Metabolism (OMM)&quot;</value>
    </filters>
    <label>All M&amp;M cases</label>
</ListView>