force-app/main/default/objects/Case/listViews/All_NTI_Cases.listView-meta.xml
<ListView>
    <fullName>All_NTI_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Request_Type__c</columns>
    <columns>Requester_First_Name__c</columns>
    <columns>Requester_Last_Name__c</columns>
    <columns>Requesting_TFA__c</columns>
    <columns>Licensing_Vendor__c</columns>
    <columns>Materials_Vendor__c</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>Date_of_Inquiry__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.VG_Request</value>
    </filters>
    <filters>
        <field>Requesting_TFA__c</field>
        <operation>equals</operation>
        <value>NTI</value>
    </filters>
    <label>All NTI Cases</label>
</ListView>