force-app/main/default/objects/Case/listViews/All_VelociGene_cases.listView-meta.xml
<ListView>
    <fullName>All_VelociGene_cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Requesting_TFA__c</field>
        <operation>equals</operation>
        <value>VelociGene</value>
    </filters>
    <label>All VelociGene Cases</label>
</ListView>