force-app/main/default/objects/Case/listViews/AllOpenCases.listView-meta.xml
<ListView>
    <fullName>AllOpenCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Requested_Item_Name__c</columns>
    <columns>Requester_First_Name__c</columns>
    <columns>Requester_Last_Name__c</columns>
    <columns>Requesting_TFA__c</columns>
    <columns>Additional_TFA__c</columns>
    <columns>Licensing_Vendor__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Materials_Vendor__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Date_of_Inquiry__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Open Cases</label>
</ListView>