force-app/main/default/objects/Case/listViews/Animal_Models.listView-meta.xml
<ListView>
    <fullName>Animal_Models</fullName>
    <columns>Request_Type__c</columns>
    <columns>MAID_S__c</columns>
    <columns>PR_Request__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Requested_Item_Name__c</columns>
    <columns>SERVICECONTRACT.NAME</columns>
    <columns>Contract__c</columns>
    <columns>PARENT.CASE_NUMBER</columns>
    <columns>Licensing_Vendor__c</columns>
    <columns>Materials_Vendor__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Requesting_TFA__c</columns>
    <columns>NAME</columns>
    <columns>Date_of_Inquiry__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Request_Type__c</field>
        <operation>equals</operation>
        <value>Animal Model</value>
    </filters>
    <label>Animal Models</label>
</ListView>