force-app/main/default/objects/Case/listViews/Cardiovascular_Cases.listView-meta.xml
<ListView>
    <fullName>Cardiovascular_Cases</fullName>
    <columns>Requesting_TFA__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Requested_Item_Name__c</columns>
    <columns>Request_Type__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Contract__c</columns>
    <columns>Licensing_Vendor__c</columns>
    <columns>Materials_Vendor_Lookup__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Requesting_TFA__c</field>
        <operation>equals</operation>
        <value>Cardiovascular (CV)</value>
    </filters>
    <label>All Cardiovascular Cases</label>
</ListView>