force-app/main/default/objects/Case/listViews/Cases_with_No_Contract.listView-meta.xml
<ListView>
    <fullName>Cases_with_No_Contract</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SERVICECONTRACT.NAME</field>
        <operation>equals</operation>
    </filters>
    <label>Cases with No Contract</label>
</ListView>