force-app/main/default/objects/Case/listViews/CTD_Cases.listView-meta.xml
<ListView>
    <fullName>CTD_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Requesting_TFA__c</field>
        <operation>equals</operation>
        <value>Connective Tissue Disorder/Synthetic Biology and Cell Engineering (CTD/SBCE)</value>
    </filters>
    <label>CTD Cases</label>
</ListView>